# marl_lib

./: CMakeLists.txt  Makefile  _Makefile  if_i_have_too_much_time  tags
glad/: glad.c
include/: glad.h  marl.h  marl_loop.h  marl_widget.h  marl_window.h
src/: marl.c
src/util/: marl_loop.c
src/visual/: marl_window.c
src/visual/widget/: marl_button.c  marl_widget.c
